--- a/battles/battles.html
+++ b/battles/battles.html
@@ -10,7 +10,7 @@
     <h1>Civil War Website</h1>
     <nav>
       <ul>
-        <li><a  class = "header_link" href="../index/index.html">Home</a></li>
+        <li><a  class = "header_link" href="../index.html">Home</a></li>
         <li><a class = "header_link" href="../timeline/timeline.html">Timeline</a></li>
         <li class="dropdown">
           <button class="dropbtn"><a class = "header_link" href="../battles/battles.html">Battles</a></button>
