--- a/timeline/timeline.html
+++ b/timeline/timeline.html
@@ -10,16 +10,16 @@
     <h1>Civil War Website</h1>
     <nav>
       <ul>
-        <li><a  class="header_link" href="../index/index.html">Home</a></li>
+        <li><a  class="header_link" href="../index.html">Home</a></li>
         <li><a class="header_link" href="../timeline/timeline.html">Timeline</a></li>
         <li class="dropdown">
           <button class="dropbtn"><a class="header_link" href="../battles/battles.html">Battles</a></button>
           <div class="dropdown-content">
             <ul>
-              <li><a class="anchor" href="file:///D:/%D0%A3%D1%87%D1%91%D0%B1%D0%B0/3%20%D0%BA%D1%83%D1%80%D1%81%202022-2023/2-%D0%B9%20%D1%81%D0%B5%D0%BC%D0%B5%D1%81%D1%82%D1%80/%D0%9B%D0%B0%D0%B1%D1%8B/Web/New%20folder/battles/battles.html#:~:text=Battle%20of%20Gettysburg,-Fought%20from%20July">Battle of Gettysburg</a></li>
-              <li><a class="anchor" href="file:///D:/%D0%A3%D1%87%D1%91%D0%B1%D0%B0/3%20%D0%BA%D1%83%D1%80%D1%81%202022-2023/2-%D0%B9%20%D1%81%D0%B5%D0%BC%D0%B5%D1%81%D1%82%D1%80/%D0%9B%D0%B0%D0%B1%D1%8B/Web/New%20folder/battles/battles.html#:~:text=Battle%20of%20Vicksburg,-The%20Battle%20of">Battle of Vicksburg</a></li>
-              <li><a class="anchor" href="file:///D:/%D0%A3%D1%87%D1%91%D0%B1%D0%B0/3%20%D0%BA%D1%83%D1%80%D1%81%202022-2023/2-%D0%B9%20%D1%81%D0%B5%D0%BC%D0%B5%D1%81%D1%82%D1%80/%D0%9B%D0%B0%D0%B1%D1%8B/Web/New%20folder/battles/battles.html#:~:text=Battle%20of%20Bull%20Run,-The%20First%20Battle">Battle of Bull Run</a></li>
-              <li><a class="anchor" href="file:///D:/%D0%A3%D1%87%D1%91%D0%B1%D0%B0/3%20%D0%BA%D1%83%D1%80%D1%81%202022-2023/2-%D0%B9%20%D1%81%D0%B5%D0%BC%D0%B5%D1%81%D1%82%D1%80/%D0%9B%D0%B0%D0%B1%D1%8B/Web/New%20folder/battles/battles.html#:~:text=Battle%20of%20Shiloh,-The%20Battle%20of">Battle of Shiloh</a></li>
+              <li><a class="anchor" href="file:///D:/%D0%A3%D1%87%D1%91%D0%B1%D0%B0/3%20%D0%BA%D1%83%D1%80%D1%81%202022-2023/2-%D0%B9%20%D1%81%D0%B5%D0%BC%D0%B5%D1%81%D1%82%D1%80/%D0%9B%D0%B0%D0%B1%D1%8B/Web/Civil_war_USA_website/battles/battles.html#Battle%20of%20Vicksburg:~:text=Battle%20of%20Shiloh-,The%20Battle%20of%20Gettysburg,-Fought%20from%20July">Battle of Gettysburg</a></li>
+              <li><a class="anchor" href="file:///D:/%D0%A3%D1%87%D1%91%D0%B1%D0%B0/3%20%D0%BA%D1%83%D1%80%D1%81%202022-2023/2-%D0%B9%20%D1%81%D0%B5%D0%BC%D0%B5%D1%81%D1%82%D1%80/%D0%9B%D0%B0%D0%B1%D1%8B/Web/Civil_war_USA_website/battles/battles.html#Battle%20of%20Vicksburg:~:text=of%20all%20time.-,Battle%20of%20Vicksburg,-The%20Battle%20of">Battle of Vicksburg</a></li>
+              <li><a class="anchor" href="file:///D:/%D0%A3%D1%87%D1%91%D0%B1%D0%B0/3%20%D0%BA%D1%83%D1%80%D1%81%202022-2023/2-%D0%B9%20%D1%81%D0%B5%D0%BC%D0%B5%D1%81%D1%82%D1%80/%D0%9B%D0%B0%D0%B1%D1%8B/Web/Civil_war_USA_website/battles/battles.html#Battle%20of%20Vicksburg:~:text=to%20the%20Confederacy.-,Battle%20of%20Bull%20Run,-The%20First%20Battle">Battle of Bull Run</a></li>
+              <li><a class="anchor" href="file:///D:/%D0%A3%D1%87%D1%91%D0%B1%D0%B0/3%20%D0%BA%D1%83%D1%80%D1%81%202022-2023/2-%D0%B9%20%D1%81%D0%B5%D0%BC%D0%B5%D1%81%D1%82%D1%80/%D0%9B%D0%B0%D0%B1%D1%8B/Web/Civil_war_USA_website/battles/battles.html#Battle%20of%20Vicksburg:~:text=they%20had%20hoped.-,Battle%20of%20Shiloh,-The%20Battle%20of">Battle of Shiloh</a></li>
             </ul>
           </div>
         </li>
