--- a/resources/resources.html
+++ b/resources/resources.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Civil War Resources</title>
   <link rel="stylesheet" href="styles/styles.css">
+  <script src="scripts/script.js" defer></script>
 </head>
 <body>
   <header>
