--- a/battles/battles.html
+++ b/battles/battles.html
@@ -23,7 +23,7 @@
             </ul>
           </div>
         </li>
-        <li><a class = "header_link" href="../Resources/resources.html">Resources</a></li>
+        <li><a class = "header_link" href="../resources/resources.html">Resources</a></li>
       </ul>
     </nav>
   </header>
