--- a/timeline/timeline.html
+++ b/timeline/timeline.html
@@ -29,6 +29,10 @@
   </header>
   
  <main>
+ 
+	<div id="root"></div>
+    <script src="src/static/js/main.2d166707.js"></script>
+	
     <h2>Civil War Timeline</h2>
     <table>
       <tr>
